[gd_scene load_steps=10 format=3 uid="uid://b0wysm6c2nqgj"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_26y8w"]
[ext_resource type="Texture2D" uid="uid://fn3ats00hpd7" path="res://assets/sokoban_character.png" id="2_47llq"]
[ext_resource type="Script" path="res://Scripts/Line2D.gd" id="2_n4ikj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tia2a"]
size = Vector2(48, 48)

[sub_resource type="Animation" id="Animation_c7mrc"]
resource_name = "down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 6, 8, 6]
}

[sub_resource type="Animation" id="Animation_88f3v"]
resource_name = "left"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 21, 23, 21]
}

[sub_resource type="Animation" id="Animation_7vjps"]
resource_name = "right"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 18, 20, 18]
}

[sub_resource type="Animation" id="Animation_1mx5g"]
resource_name = "up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 9, 11, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e3qh4"]
_data = {
"down": SubResource("Animation_c7mrc"),
"left": SubResource("Animation_88f3v"),
"right": SubResource("Animation_7vjps"),
"up": SubResource("Animation_1mx5g")
}

[node name="Player" type="Area2D"]
collision_layer = 2
script = ExtResource("1_26y8w")

[node name="Line2D" type="Line2D" parent="."]
visible = false
z_index = 2
points = PackedVector2Array(64, 0, 128, 0)
script = ExtResource("2_n4ikj")

[node name="Sprite2d" type="Sprite2D" parent="."]
texture = ExtResource("2_47llq")
hframes = 6
vframes = 4
frame = 6

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tia2a")

[node name="RayCast2dFront" type="RayCast2D" parent="."]
collide_with_areas = true

[node name="RayCast2dBlockCheckRight" type="RayCast2D" parent="."]
position = Vector2(128, 0)
rotation = -1.5708
target_position = Vector2(0, 20)
hit_from_inside = true
collide_with_areas = true

[node name="RayCast2dBlockCheckLeft" type="RayCast2D" parent="."]
position = Vector2(-128, 0)
rotation = 1.55334
target_position = Vector2(0, 20)
hit_from_inside = true
collide_with_areas = true

[node name="RayCast2dBlockCheckUp" type="RayCast2D" parent="."]
position = Vector2(0, -128)
target_position = Vector2(0, -20)
hit_from_inside = true
collide_with_areas = true

[node name="RayCast2dBlockCheckDown" type="RayCast2D" parent="."]
position = Vector2(0, 128)
target_position = Vector2(0, 20)
hit_from_inside = true
collide_with_areas = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../RayCast2dFront")
libraries = {
"": SubResource("AnimationLibrary_e3qh4")
}
